v1/api-version-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-version-v1
  labels:
    app: api-version
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: api-version
    version: v1.0.0
