v1/api-version-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-version
  labels:
    app: api-version
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: api-version.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-version-v1
            port:
              number: 8080
